# vscode-lldb

./: .vscodeignore  Cargo.toml  package.json  vscode-lldb.code-workspace
adapter2/: Cargo.toml  codelldb.py  rust.py
adapter2/src/: debug_protocol.rs  debug_session.rs  disassembly.rs  error.rs  event_listener.rs  handles.rs  launch_config.rs  lib.rs  main.rs  must_initialize.rs  python.rs  source_map.rs  wire_protocol.rs  worker_thread.rs
adapter2/src/debug_session/: tokio.rs
extension/: startup.ts
extension/tests/: adapter.test.ts
tools/: build_codelldb.py  build_codelldb2.py  post_build.py
