cargo-features = ["edition"]

[package]
name = "codelldb2"
version = "0.1.0"
authors = ["Vadim Chugunov <vadimcn@gmail.com>"]
edition = "2018"

[dependencies]
debug-protocol = { path = "deps/debug-protocol" }
lldb = { path = "deps/lldb" }
serde = "1.0.66"
serde_derive = "1.0.66"
serde_json = "1.0.20"
failure = "0.1.1"
failure_derive = "0.1.1"
log = "0.4.2"
env_logger = "0.5.12"
tokio = "0.1.7"
tokio-io = "0.1.7"
tokio-codec = "0.1.0"
bytes = "0.4.8"
futures = "0.1.21"
tokio-threadpool = "0.1.5"
regex = "1.0.2"
globset = "0.4.0"
superslice = "0.1.0"
lazy_static = "1.1.0"

[lib]
crate-type = ["cdylib"]
